navigation bar, banner design complete

--- a/index.html
+++ b/index.html
@@ -4,16 +4,95 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Frutika || BD</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
         <!------------ Header Starts From Here ------------>
-        <header></header>
+        <header>
+            <div class="nav-container">
+                <nav>
+                    <div class="logo">
+                        <a href=""
+                            ><img src="/images/logo.png" alt="" srcset=""
+                        /></a>
+                    </div>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Pages</a></li>
+                            <li><a href="">News</a></li>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">Shop</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-icon">
+                        <img src="/images/icons/cart.png" alt="" srcset="" />
+                        <img src="/images/icons/search.png" alt="" srcset="" />
+                    </div>
+                </nav>
+
+                <div class="banner">
+                    <h5 class="banner-sub-title">fresh & organic</h5>
+                    <h1 class="banner-title">Delicious Seasonal Fruits</h1>
+                    <div class="banner-btn">
+                        <a href="#">
+                            <button class="btn">Fruit Collection</button>
+                        </a>
+                        <a href="#">
+                            <button class="outline-btn">Contact Us</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="banner-extra-container">
+                <div class="ssr-container">
+                    <img
+                        src="/images/icons/free-shipping.png"
+                        alt=""
+                        srcset=""
+                    />
+                    <div class="ssr-content">
+                        <h4>Free Shipping</h4>
+                        <p>When Order Over $75</p>
+                    </div>
+                </div>
+                <div class="ssr-container">
+                    <img
+                        src="/images/icons/customer-support.png"
+                        alt=""
+                        srcset=""
+                    />
+                    <div class="ssr-content">
+                        <h4>24/7 Support</h4>
+                        <p>Get Support All Day</p>
+                    </div>
+                </div>
+                <div class="ssr-container">
+                    <img src="/images/icons/money-back.png" alt="" srcset="" />
+                    <div class="ssr-content">
+                        <h4>Refund</h4>
+                        <p>Get Refund Within 3Days</p>
+                    </div>
+                </div>
+            </div>
+        </header>
 
         <!------------ Main Starts From Here ------------>
         <main></main>
 
         <!------------ Footer Starts From Here ------------>
         <footer></footer>
+        <script
+            src="https://kit.fontawesome.com/69fa576880.js"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
