Our Products Section is Complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
     <body>
         <!------------ Header Starts From Here ------------>
@@ -86,7 +86,88 @@
         </header>
 
         <!------------ Main Starts From Here ------------>
-        <main></main>
+        <main>
+            <section class="products-container">
+                <div class="products-details">
+                    <h3 class="products-title"><span>Our</span> Products</h3>
+                    <p class="products-brief">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Vitae, tenetur.
+                    </p>
+                </div>
+
+                <div class="products-card-container">
+                    <!-- card no 1 -->
+                    <div class="product-card">
+                        <img
+                            class="product-img"
+                            src="./images/products/product-img-1.jpg"
+                            alt="Strawberry"
+                            srcset=""
+                        />
+                        <h4 class="product-name">Strawberry</h4>
+                        <p>Per Kg</p>
+                        <h3 class="product-price">65$</h3>
+                        <a href="#">
+                            <button class="btn btn-cart">
+                                <img
+                                    src="./images/icons/cart.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                                Add to card
+                            </button>
+                        </a>
+                    </div>
+
+                    <!-- card no 2 -->
+                    <div class="product-card">
+                        <img
+                            class="product-img"
+                            src="./images/products/product-img-5.jpg"
+                            alt="Strawberry"
+                            srcset=""
+                        />
+                        <h4 class="product-name">Apple</h4>
+                        <p>Per Kg</p>
+                        <h3 class="product-price">35$</h3>
+                        <a href="#">
+                            <button class="btn btn-cart">
+                                <img
+                                    src="./images/icons/cart.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                                Add to card
+                            </button>
+                        </a>
+                    </div>
+
+                    <!-- card no 3 -->
+                    <div class="product-card">
+                        <img
+                            class="product-img"
+                            src="./images/products/product-img-2.jpg"
+                            alt="Strawberry"
+                            srcset=""
+                        />
+                        <h4 class="product-name">Berry</h4>
+                        <p>Per Kg</p>
+                        <h3 class="product-price">45$</h3>
+                        <a href="#">
+                            <button class="btn btn-cart">
+                                <img
+                                    src="./images/icons/cart.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                                Add to card
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <!------------ Footer Starts From Here ------------>
         <footer></footer>
