Deal of the month section is compete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="shortcut icon"
+            href="./images/favicon.png"
+            type="image/x-icon"
+        />
         <link rel="stylesheet" href="./styles/style.css" />
     </head>
     <body>
@@ -87,6 +92,7 @@
 
         <!------------ Main Starts From Here ------------>
         <main>
+            <!--------- Our Products Section ---------->
             <section class="products-container">
                 <div class="products-details">
                     <h3 class="products-title"><span>Our</span> Products</h3>
@@ -167,13 +173,47 @@
                     </div>
                 </div>
             </section>
+
+            <!--------- Deal Of The Month Section ---------->
+            <section class="deal-container">
+                <img
+                    class="deal-img"
+                    src="./images/deal-fruit.jpg"
+                    alt="Strawberry"
+                    srcset=""
+                />
+                <div class="deal-content">
+                    <h3 class="products-title"><span>Our</span> Products</h3>
+                    <h5 class="sub-title">hikan strawberry</h5>
+                    <p class="deal-brief">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Perspiciatis beatae facere eveniet voluptatum sit
+                        soluta exercitationem libero rem magni sed officia,
+                        magnam aut non inventore suscipit iste nobis at.
+                    </p>
+                    <div class="deal-counter">
+                        <div class="deal-time">
+                            <h4>01</h4>
+                            <p>Days</p>
+                        </div>
+                        <div class="deal-time">
+                            <h4>06</h4>
+                            <p>Hour</p>
+                        </div>
+                        <div class="deal-time">
+                            <h4>12</h4>
+                            <p>Minute</p>
+                        </div>
+                        <div class="deal-time">
+                            <h4>36</h4>
+                            <p>Second</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!------------ Footer Starts From Here ------------>
         <footer></footer>
-        <script
-            src="https://kit.fontawesome.com/69fa576880.js"
-            crossorigin="anonymous"
-        ></script>
     </body>
 </html>
