customers feedback section is complete

--- a/index.html
+++ b/index.html
@@ -209,7 +209,36 @@
                             <p>Second</p>
                         </div>
                     </div>
+                    <a href="#">
+                        <button class="btn btn-cart">
+                            <img
+                                src="./images/icons/cart.png"
+                                alt=""
+                                srcset=""
+                            />
+                            Add to card
+                        </button>
+                    </a>
                 </div>
+            </section>
+
+            <!--------- Customers Feedback Section ---------->
+
+            <section class="feedback-container">
+                <img
+                    src="./images/avaters/avatar1.png"
+                    alt="Customers"
+                    srcset=""
+                />
+                <h4>Jacob Sikim</h4>
+                <h6>Local Shop Owner</h6>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quos repellendus molestiae nisi enim beatae, laborum vitae
+                    fugiat tenetur mollitia repudiandae voluptatibus unde
+                    aperiam vel, aliquam corrupti, inventore ipsam hic maxime.
+                </p>
+                <span class="quote">&#10078;</span>
             </section>
         </main>
 
