frutikha origin history section complete

--- a/index.html
+++ b/index.html
@@ -223,7 +223,6 @@
             </section>
 
             <!--------- Customers Feedback Section ---------->
-
             <section class="feedback-container">
                 <img
                     src="./images/avaters/avatar1.png"
@@ -239,6 +238,43 @@
                     aperiam vel, aliquam corrupti, inventore ipsam hic maxime.
                 </p>
                 <span class="quote">&#10078;</span>
+            </section>
+
+            <!--------- Frutikha Origin History Section ---------->
+            <section class="origin-container">
+                <div class="origin-video">
+                    <iframe
+                        width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/05MLwuGVZhE?si=PK4XOJyJJBHV6ZIg"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin"
+                        allowfullscreen
+                    ></iframe>
+                </div>
+
+                <div class="origin-content">
+                    <p>Since Year 1999</p>
+                    <h3 class="products-title">We are <span>Frutikha</span></h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Est iste excepturi quae optio modi a quisquam
+                        praesentium quia. Fugiat ad similique minima officia
+                        aspernatur ipsa aperiam aut vero rerum modi aliquid
+                        nostrum.
+                    </p>
+                    <br />
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quibusdam cum ducimus molestiae numquam officia neque
+                        libero iste non, excepturi illo!
+                    </p>
+                    <a href="#">
+                        <button class="btn">Know More</button>
+                    </a>
+                </div>
             </section>
         </main>
 
