Sales Discount Section Complete

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <body>
         <!------------ Header Starts From Here ------------>
         <header>
+            <!--------- Navigation Bar Section Section ---------->
             <div class="nav-container">
                 <nav>
                     <div class="logo">
@@ -57,6 +58,7 @@
                 </div>
             </div>
 
+            <!--------- Banner Section ---------->
             <div class="banner-extra-container">
                 <div class="ssr-container">
                     <img
@@ -276,6 +278,26 @@
                     </a>
                 </div>
             </section>
+
+            <!--------- Sale Discount Section --------->
+            <section class="discount-container">
+                <div class="discount-content">
+                    <h3 class="products-title">
+                        December sale is on! with big <span>Discount...</span>
+                    </h3>
+                    <div class="discount-precent">
+                        <p>Sale! Upto</p>
+                        <h3>50%</h3>
+                        <p>off</p>
+                    </div>
+                    <a href="#">
+                        <button class="btn">Shop Now</button>
+                    </a>
+                </div>
+            </section>
+
+            <!----------- Our News Section Style ---------->
+            <section></section>
         </main>
 
         <!------------ Footer Starts From Here ------------>
