Our News Section Is Complete

--- a/index.html
+++ b/index.html
@@ -297,7 +297,161 @@
             </section>
 
             <!----------- Our News Section Style ---------->
-            <section></section>
+            <section class="news-container">
+                <div class="news-card-header products-details">
+                    <h3 class="products-title"><span>Our</span> News</h3>
+                    <p class="products-brief">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Vitae, tenetur.
+                    </p>
+                </div>
+
+                <div class="news-card-container">
+                    <!--News Card No-1 -->
+                    <div class="news-card">
+                        <img
+                            class="news-card-img"
+                            src="./images/latest-news/news-bg-5.jpg"
+                            alt=""
+                            srcset=""
+                        />
+                        <div class="news-card-content">
+                            <h3>Taste the Season: Fresh Fruits, Peak Flavor</h3>
+                            <div class="news-author-info">
+                                <div class="news-author">
+                                    <img
+                                        src="./images/icons/user.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <p>Admin</p>
+                                </div>
+                                <div class="news-date">
+                                    <img
+                                        src="./images/icons/calendar.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <p>10 july, 2025</p>
+                                </div>
+                            </div>
+                            <p class="news-card-details">
+                                Fruits are nature’s sweet, nutritious treasures,
+                                packed with vitamins, minerals, and
+                                antioxidants. They boost health, energize the
+                                body, and delight the senses with vibrant
+                                colors, refreshing flavors, and endless variety.
+                            </p>
+                            <div class="news-link">
+                                <a href=""
+                                    >read more
+                                    <img
+                                        src="./images/icons/read-more-arrow.png"
+                                        alt=""
+                                        srcset=""
+                                /></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--News Card No-2 -->
+                    <div class="news-card">
+                        <img
+                            class="news-card-img"
+                            src="./images/latest-news/news-bg-4.jpg"
+                            alt=""
+                            srcset=""
+                        />
+                        <div class="news-card-content">
+                            <h3>Discover the Best Apples for Every Taste</h3>
+                            <div class="news-author-info">
+                                <div class="news-author">
+                                    <img
+                                        src="./images/icons/user.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <p>Admin</p>
+                                </div>
+                                <div class="news-date">
+                                    <img
+                                        src="./images/icons/calendar.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <p>10 july, 2025</p>
+                                </div>
+                            </div>
+                            <p class="news-card-details">
+                                An apple holds the sweetness of nature wisdom
+                                symbol of health, growth, and simplicity. In
+                                every crisp bite, we rediscover balance,
+                                nourishment, and the beauty of life’s
+                                essentials.
+                            </p>
+                            <div class="news-link">
+                                <a href=""
+                                    >read more
+                                    <img
+                                        src="./images/icons/read-more-arrow.png"
+                                        alt=""
+                                        srcset=""
+                                /></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--News Card No-3 -->
+                    <div class="news-card">
+                        <img
+                            class="news-card-img"
+                            src="./images/latest-news/news-bg-6.jpg"
+                            alt=""
+                            srcset=""
+                        />
+                        <div class="news-card-content">
+                            <h3>Vine to Table: The Best Grapes Online</h3>
+                            <div class="news-author-info">
+                                <div class="news-author">
+                                    <img
+                                        src="./images/icons/user.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <p>Admin</p>
+                                </div>
+                                <div class="news-date">
+                                    <img
+                                        src="./images/icons/calendar.png"
+                                        alt=""
+                                        srcset=""
+                                    />
+                                    <p>10 july, 2025</p>
+                                </div>
+                            </div>
+                            <p class="news-card-details">
+                                Grapes, nature’s sweet and juicy treasure, are
+                                packed with antioxidants, vitamins, and
+                                refreshing flavor. Whether enjoyed fresh, dried,
+                                or in wine, grapes symbolize abundance, health,
+                                and the timeless joy of sharing.
+                            </p>
+                            <div class="news-link">
+                                <a href=""
+                                    >read more
+                                    <img
+                                        src="./images/icons/read-more-arrow.png"
+                                        alt=""
+                                        srcset=""
+                                /></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a class="news-btn" href="#">
+                    <button class="btn">More News</button>
+                </a>
+            </section>
         </main>
 
         <!------------ Footer Starts From Here ------------>
