company identification logo design section is complete

--- a/index.html
+++ b/index.html
@@ -452,6 +452,17 @@
                     <button class="btn">More News</button>
                 </a>
             </section>
+
+            <!----------- Company Identification Logo Section ------------>
+            <section class="company-container">
+                <div class="company-content">
+                    <img src="./images/company-logos/1.png" alt="" srcset="" />
+                    <img src="./images/company-logos/2.png" alt="" srcset="" />
+                    <img src="./images/company-logos/3.png" alt="" srcset="" />
+                    <img src="./images/company-logos/4.png" alt="" srcset="" />
+                    <img src="./images/company-logos/5.png" alt="" srcset="" />
+                </div>
+            </section>
         </main>
 
         <!------------ Footer Starts From Here ------------>
