full website layout complete

--- a/index.html
+++ b/index.html
@@ -466,6 +466,132 @@
         </main>
 
         <!------------ Footer Starts From Here ------------>
-        <footer></footer>
+        <footer>
+            <section class="footer-container">
+                <div class="footer-info-container">
+                    <div class="about-content">
+                        <h3>About us</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Voluptatum maiores facere consequatur alias
+                            iste consequuntur iusto quasi exercitationem
+                            deleniti blanditiis atque, quis tempora sunt.
+                        </p>
+                    </div>
+
+                    <div class="get-touch-content">
+                        <h3>Get In Touch</h3>
+                        <p>Muladi, Barishal, Bangladesh</p>
+                        <p>support@frutikha.com</p>
+                        <p>+88 012 345 6789</p>
+                    </div>
+
+                    <div class="pages-content">
+                        <h3>Pages</h3>
+                        <ul>
+                            <li>
+                                <img
+                                    src="./images/icons/link-arrow.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                                <a href="">Home</a>
+                            </li>
+                            <li>
+                                <img
+                                    src="./images/icons/link-arrow.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                                <a href="">About</a>
+                            </li>
+                            <li>
+                                <img
+                                    src="./images/icons/link-arrow.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                                <a href="">Shop</a>
+                            </li>
+                            <li>
+                                <img
+                                    src="./images/icons/link-arrow.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                                <a href="">News</a>
+                            </li>
+                            <li>
+                                <img
+                                    src="./images/icons/link-arrow.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                                <a href="">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="subscribe-content">
+                        <h3>Subscribe</h3>
+                        <p>
+                            Subscribe to our mailing list to get the latest
+                            updates
+                        </p>
+                        <div class="subscribe-input-content">
+                            <input
+                                type="email"
+                                name="email"
+                                id="email"
+                                placeholder="email"
+                            />
+                            <button class="input-button">
+                                <img
+                                    src="./images/icons/paper-plane.png"
+                                    alt=""
+                                    srcset=""
+                                />
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <span class="horizontal-border"></span>
+                <div class="footer-link-container">
+                    <div class="footer-copyright">
+                        <p>
+                            Copyright 2019. <span>M.H Shamim</span> All Rights
+                            Reserved
+                        </p>
+                        <p>Students of -<span> Programming Hero B-12</span></p>
+                    </div>
+                    <div class="social-link">
+                        <a href="https://www.facebook.com/" target="_blank"
+                            ><img
+                                src="./images/icons/facebook-app-symbol.png"
+                                alt=""
+                                srcset=""
+                        /></a>
+                        <a href="https://www.twitter.com/" target="_blank"
+                            ><img
+                                src="./images/icons/twitter.png"
+                                alt=""
+                                srcset=""
+                        /></a>
+                        <a href="https://www.linkedin.com/" target="_blank"
+                            ><img
+                                src="./images/icons/linkedin.png"
+                                alt=""
+                                srcset=""
+                        /></a>
+                        <a href="https://instagram.com/" target="_blank"
+                            ><img
+                                src="./images/icons/instagram.png"
+                                alt=""
+                                srcset=""
+                        /></a>
+                    </div>
+                </div>
+            </section>
+        </footer>
     </body>
 </html>
