--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
                 <div class="products-details">
                     <h3 class="products-title"><span>Our</span> Products</h3>
                     <p class="products-brief">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Vitae, tenetur.
+                        Fresh, handpicked fruits delivered to your door—premium
+                        quality, rich flavors, and seasonal variety for a
+                        healthy, delicious experience.
                     </p>
                 </div>
 
@@ -185,13 +186,15 @@
                     srcset=""
                 />
                 <div class="deal-content">
-                    <h3 class="products-title"><span>Our</span> Products</h3>
+                    <h3 class="products-title">
+                        <span>Deal</span> of the month
+                    </h3>
                     <h5 class="sub-title">hikan strawberry</h5>
                     <p class="deal-brief">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Perspiciatis beatae facere eveniet voluptatum sit
-                        soluta exercitationem libero rem magni sed officia,
-                        magnam aut non inventore suscipit iste nobis at.
+                        Enjoy a limited-time discount on our Hikan strawberries!
+                        Delight in vibrant, juicy berries at unbeatable
+                        prices—perfect for smoothies, desserts, or fresh
+                        snacking. Stock up now and savor sweet savings today!
                     </p>
                     <div class="deal-counter">
                         <div class="deal-time">
