banner responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <!--------- Sale Discount Section --------->
             <section class="discount-container">
                 <div class="discount-content">
-                    <h3 class="products-title">
+                    <h3 class="products-title sale-discount">
                         December sale is on! with big <span>Discount...</span>
                     </h3>
                     <div class="discount-precent">
@@ -475,10 +475,12 @@
                     <div class="about-content">
                         <h3>About us</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Voluptatum maiores facere consequatur alias
-                            iste consequuntur iusto quasi exercitationem
-                            deleniti blanditiis atque, quis tempora sunt.
+                            We create professional, responsive web templates
+                            tailored for agencies and consultancy firms,
+                            enhancing brand identity, user engagement, and
+                            online presence with modern design, seamless
+                            functionality, and optimized performance across
+                            devices.
                         </p>
                     </div>
 
@@ -541,6 +543,7 @@
                             Subscribe to our mailing list to get the latest
                             updates
                         </p>
+
                         <div class="subscribe-input-content">
                             <input
                                 type="email"
@@ -558,7 +561,9 @@
                         </div>
                     </div>
                 </div>
+
                 <span class="horizontal-border"></span>
+
                 <div class="footer-link-container">
                     <div class="footer-copyright">
                         <p>
