--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <nav>
                     <div class="logo">
                         <a href=""
-                            ><img src="/images/logo.png" alt="" srcset=""
+                            ><img src="./images/logo.png" alt="" srcset=""
                         /></a>
                     </div>
+
                     <div class="menu">
                         <ul>
                             <li><a href="">Home</a></li>
@@ -38,9 +39,10 @@
                             <li><a href="">Shop</a></li>
                         </ul>
                     </div>
+
                     <div class="menu-icon">
-                        <img src="/images/icons/cart.png" alt="" srcset="" />
-                        <img src="/images/icons/search.png" alt="" srcset="" />
+                        <img src="./images/icons/cart.png" alt="" srcset="" />
+                        <img src="./images/icons/search.png" alt="" srcset="" />
                     </div>
                 </nav>
 
@@ -62,7 +64,7 @@
             <div class="banner-extra-container">
                 <div class="ssr-container">
                     <img
-                        src="/images/icons/free-shipping.png"
+                        src="./images/icons/free-shipping.png"
                         alt=""
                         srcset=""
                     />
@@ -71,9 +73,10 @@
                         <p>When Order Over $75</p>
                     </div>
                 </div>
+
                 <div class="ssr-container">
                     <img
-                        src="/images/icons/customer-support.png"
+                        src="./images/icons/customer-support.png"
                         alt=""
                         srcset=""
                     />
@@ -82,8 +85,9 @@
                         <p>Get Support All Day</p>
                     </div>
                 </div>
+
                 <div class="ssr-container">
-                    <img src="/images/icons/money-back.png" alt="" srcset="" />
+                    <img src="./images/icons/money-back.png" alt="" srcset="" />
                     <div class="ssr-content">
                         <h4>Refund</h4>
                         <p>Get Refund Within 3Days</p>
