Customer Feedback section responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
                         </div>
                         <div class="deal-time">
                             <h4>12</h4>
-                            <p>Minute</p>
+                            <p>Min</p>
                         </div>
                         <div class="deal-time">
                             <h4>36</h4>
-                            <p>Second</p>
+                            <p>Sec</p>
                         </div>
                     </div>
                     <a href="#">
@@ -241,10 +241,11 @@
                 <h4>Jacob Sikim</h4>
                 <h6>Local Shop Owner</h6>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quos repellendus molestiae nisi enim beatae, laborum vitae
-                    fugiat tenetur mollitia repudiandae voluptatibus unde
-                    aperiam vel, aliquam corrupti, inventore ipsam hic maxime.
+                    Great selection of fresh fruits at reasonable prices! As a
+                    local shop owner, I appreciate the variety and quality you
+                    offer. The website is easy to navigate and makes ordering
+                    simple. It’s a reliable source for keeping my store stocked
+                    with the best produce.
                 </p>
                 <span class="quote">&#10078;</span>
             </section>
